fix overflows in home layout

--- a/_sass/_layouts.scss
+++ b/_sass/_layouts.scss
@@ -1,6 +1,9 @@
 div.home-layout {
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
+  position: relative;
+  scroll-behavior: smooth;
   @apply flex flex-col;
 
   div.content-wrapper {
